[ADD] New look for cards and upgrade style and readme

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </figure>
 
                 <section class="card_text">
-                    <p class="title_pizza">Mamita pizza individual</p>
+                    <p class="title_pizza">Mamita's Pizza Individual</p>
                     <p class="pizzaIngredients"><span class="subra">Ingredientes</span>: Salsa de la casa, jamón ahumado, jamón de pierna, queso mozzarella, cebolla dulce, pimentón y maíz.
                     </p>
                     <p class="pizzaPrice">Precio: 2<span class="currency">$</span></p>
@@ -57,7 +57,7 @@
                 </figure>
 
                 <section class="card_text">
-                    <p class="title_pizza">Mamita pizza familiar</p>
+                    <p class="title_pizza">Mamita's Pizza Familiar</p>
                     <p class="pizzaIngredients"><span class="subra">Ingredientes</span>: Salsa de la casa, jamón ahumado, jamón de pierna, queso mozzarella, cebolla dulce, pimentón y maíz.
                     </p>
                     <p class="pizzaPrice">Precio: 5<span class="currency">$</span></p>
@@ -87,11 +87,11 @@
             </h3>
             <h4>Guarenas - Menca</h4>
             <article>
+                <p>Lunes a Viernes</p>
                 <figure>
                     <img id="calendarImage" src="./src/assets/calendar.svg" alt="calendario" width="100" height="100" />
                 </figure>
-                <p>Lunes / Viernes</p>
-                <p>7:00pm / 12:00pm</p>
+                <p>7:00pm a 12:00am</p>
             </article>
         </section>
     </main>
