--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <article class="card">
                 <figure>
                     <!-- Aqui deberiamos dejar imagenes responsivas de html. -->
-                    <img class="pizzaImage" src="./src/assets/mamita.jpeg" alt="pizza imagen" width="300"
+                    <img class="pizzaImage" src="./src/assets/mamita2.jpeg" alt="pizza imagen" width="300"
                         height="300" />
                 </figure>
 
@@ -52,7 +52,7 @@
             <article class="card">
                 <figure>
                     <!-- Aqui deberiamos dejar imagenes responsivas de html. -->
-                    <img class="pizzaImage" src="./src/assets/mamita.jpeg" alt="pizza imagen" width="300"
+                    <img class="pizzaImage" src="./src/assets/mamita2.jpeg" alt="pizza imagen" width="300"
                         height="300" />
                 </figure>
 
